--- a/bootstrap/day2/index.html
+++ b/bootstrap/day2/index.html
@@ -59,15 +59,15 @@
     ......Am I Change it..................................................................................
     ..............................................................................
     ..............................................................................
+    ............................................Janarthanan..................................
     ..............................................................................
-    ..............................................................................
-    ..............................................................................
+    .............................................Janarthanan.................................
     ..............................................................................
     
+    ..............................................Janarthanan................................
     ..............................................................................
-    ..............................................................................
-    ............................................................................................................................................................
-    
+    ...............................................Janarthanan.............................................................................................................
+
 
 
 
